# reddit-feeds

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Changelog.txt  Dockerfile  README.md  config.yaml.example  docker-compose.tsfunnel.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/output-styles/: critical-engineer.md
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-04-23-reddit-feeds.md  2026-04-24-env-config-tailscale.md
docs/superpowers/specs/: 2026-04-23-reddit-feeds-design.md  2026-04-24-docker-deployment-design.md  2026-04-24-env-config-design.md
src/: cli.py  runner.py
src/config/: loader.py  models.py
src/feed/: builder.py  models.py  opml.py  writer.py
src/media/: extractor.py
src/reddit/: auth.py  client.py  models.py
src/reddit_feeds/: cli.py  runner.py
src/reddit_feeds/config/: loader.py  models.py
src/reddit_feeds/feed/: builder.py  models.py  writer.py
src/reddit_feeds/media/: extractor.py
src/reddit_feeds/reddit/: client.py  models.py
src/store/: _io.py  feed_store.py  models.py  seen_store.py
tests/: conftest.py  test_cli.py  test_config.py  test_feed_builder.py  test_feed_opml.py  test_media_extractor.py  test_reddit_auth.py  test_reddit_client.py  test_runner.py  test_store.py
