[project]
name = "reddit-feeds"
version = "0.1.0"
description = "Reddit gallery to RSS feed generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gallery-dl>=1.31.10",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-slugify>=8.0.0",
    "aiofiles>=25.1.0",
    "feedgen>=1.0.0",
    "typer>=0.24.1",
    "pydantic>=2.13.3",
]

[project.scripts]
reddit-feeds = "reddit_feeds.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "COM812",
    "D104",
    "D107",
    "D203",
    "D213",
    "EM102",
    "ERA001",
    "FBT002",
    "G004",
    "PLR0913",
    "T201",
    "TRY003",
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"src/reddit_feeds/config/loader.py" = ["TC003", "TC001"]
"tests/**/*.py" = ["S101", "ANN", "D100", "D101", "D102", "D103", "D400", "D403", "D415", "INP001", "SIM117", "S314", "SLF001", "PLR2004", "ARG001", "PLC0415", "EM101"]

[dependency-groups]
dev = [
    "feedparser>=6.0.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.8",
]
