[project]
name = "reddit-feeds"
version = "0.1.0"
description = "Reddit gallery to RSS feed generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gallery-dl>=1.31.10",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-slugify>=8.0.0",
    "aiofiles>=25.1.0",
    "feedgen>=1.0.0",
    "typer>=0.24.1",
    "pydantic>=2.13.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing trailing comma — conflicts with ruff formatter's own comma handling
    "D104",    # missing docstring in public package __init__.py — not required for this project
    "D107",    # missing docstring in __init__ — data classes and simple constructors don't need them
    "D203",    # one blank line before class docstring — conflicts with D211 (no blank line), using D211
    "D213",    # multi-line docstring summary on second line — conflicts with D212 (first line), using D212
    "EM102",   # f-string in exception message — acceptable; avoids a separate variable just for the message
    "ERA001",  # commented-out code — too noisy during active development
    "G004",    # f-string in logging call — acceptable; we prefer readability over lazy % formatting
    "PLR0913", # too many arguments (>5) — unavoidable in some constructors and async gather calls
    "T201",    # print() detected — we use logger, but some CLI output via print is intentional
    "TRY400",  # use logging.exception instead of logging.error in except block — error is intentional here
]

[tool.ruff.lint.per-file-ignores]
"src/config/loader.py" = ["TC003", "TC001"]
"src/media/extractor.py" = ["BLE001"]  # gallery-dl FFI — any exception type possible
"tests/**/*.py" = ["S101", "ANN", "D100", "D101", "D102", "D103", "D400", "D403", "D415", "INP001", "SIM117", "S314", "SLF001", "PLR2004", "ARG001", "PLC0415", "EM101"]

[dependency-groups]
dev = [
    "feedparser>=6.0.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.8",
]
